tests/agl/rejections/type/bare_variant_foreign_enum.agl
enum Color
  | Red
  | Green

enum Box
  | Empty
  | Full(item: int)

let c: Color = Red
case c of
  | Red   => print "red"
  | Green => print "green"
  | Empty => print "empty"
